--- a/retgui/src/main/webapp/WEB-INF/views/index.html
+++ b/retgui/src/main/webapp/WEB-INF/views/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>ARAF User Management. It`s working.</h1>
+<h1>RET GUI. It`s working.</h1>
 </body>
 </html>
